@@ -1,20 +1,6 @@
 #! /usr/bin/make -f
-# Sample debian/rules that uses debhelper.
-# GNU copyright 1997 to 1999 by Joey Hess.
 
-# Uncomment this to turn on verbose mode.
-#export DH_VERBOSE=1
-
-# This is the debhelper compatability version to use.
-export DH_COMPAT=2
-
-# Udebs have no postrm file, don't make one
-export DH_OPTIONS=-n
-
-PACKAGE=$(shell dh_listpackages)
-VERSION=$(shell dpkg-parsechangelog | grep ^Version: | cut -d ' ' -f 2)
-ARCH=$(shell dpkg --print-architecture)
-FILENAME=$(PACKAGE)_$(VERSION)_all.udeb
+PACKAGE=languagechooser
 
 build: build-stamp
 build-stamp:
@@ -34,21 +20,13 @@ install: build
 	dh_testroot
 	dh_clean -k
 	dh_installdirs
-	install $(PACKAGE) languagemap debian/$(PACKAGE)/usr/bin
-	mkdir -p  debian/$(PACKAGE)/DEBIAN
+	dh_install languagechooser languagemap usr/bin
+	mkdir -p debian/$(PACKAGE)/DEBIAN
 	install -m0755 debian/languagechooser.menutest debian/$(PACKAGE)/DEBIAN/menutest
 	install -m0755 prebaseconfig debian/$(PACKAGE)/usr/lib/prebaseconfig.d/65languagechooser
-
 	install -m644 languagelist debian/$(PACKAGE)/usr/share/languagelist
 
-# Build architecture-independent files here.
 binary-indep: build install
-# We have nothing to do by default.
-
-# Build architecture-dependent files here.
-#
-# Note that this builds a .udeb, which is not policy compliant or anything.
-binary-arch: build install
 	dh_testdir
 	dh_testroot
 	dh_installdebconf
@@ -57,8 +35,10 @@ binary-arch: build install
 	dh_fixperms
 	dh_installdeb
 	dh_shlibdeps
-	dh_gencontrol -- -n$(FILENAME)
-	dh_builddeb --filename=$(FILENAME)
+	dh_gencontrol
+	dh_builddeb
+
+binary-arch: build install
 
 binary: binary-indep binary-arch
 .PHONY: build clean binary-indep binary-arch binary install
